# HaPy-Skell

./: README.md  haskell-log.txt
Haskell/hapyskell.hsproj/: .uuid  Haskell_core.hs  hapyskell.cabal
Haskell/hapyskell.hsproj/Hapyskell/: Hapyskell.hs  Manager.hs  Structures.hs
Haskell/hapyskell.hsproj/Hapyskell/Utils/: JSON.hs  Logging.hs
Haskell/hapyskell.hsproj/Utils/: Logging.hs
Python/hapyskell/: external_process_manager.py  hapyskell.py
haskell_core/: Data.hs  Haskell_core  Haskell_core.hs  Manager.hs  Structures.hs  haskell-log.txt  log.txt
haskell_core.hsproj/: .uuid  Haskell_core  Haskell_core.hs  Manager.hs  Structures.hs  _Haskell_core.hsplay  hapy-skell.cabal  haskellcore.cabal
haskell_core.hsproj/Utils/: JSON.hs  JSON_Parser.hs  Logging.hs
python_core/hapyskell/: Network.py  main.py
python_main/: Network.py  external_process_manager.py  haskell-log.txt  log.txt  main.py  server.py
