name: hapyskell
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-5.9-2
x-last-ide-version: HfM1.2.1
Executable hapyskell
  main-is: Haskell_core.hs
  buildable: True
  build-depends:
      base -any,
      containers -any,
      bytestring -any,
      aeson -any,
      network -any,
      unix -any
  other-modules:
      Hapyskell.Structures
      Hapyskell.Utils.JSON
      Hapyskell.Utils.Logging
      Hapyskell.Manager
      Hapyskell.Hapyskell
